Fix an issue that large diagrams are displayed too small

--- a/app/view/app.less
+++ b/app/view/app.less
@@ -363,6 +363,7 @@ main {
 
     mf-diagram-inner {
         display: inline-block;
+        width: 100%;
         > svg {
             width: 100%;
         }
